--- a/dev/consumer-dev.properties
+++ b/dev/consumer-dev.properties
@@ -3,15 +3,15 @@ consumerConfig=bar
 eureka.client.registryFetchIntervalSecond=5
 service.ribbon.ServerListRefreshInterval=1
 
-#ÅäÖÃribbonÖØÊÔÇëÇó
+#é…ç½®ribboné‡è¯•è¯·æ±‚
 ribbon.ConnectTimeout=3000
 ribbon.ReadTimeout=30000
-#Í¬Ò»ÊµÀı×î´óÖØÊÔ´ÎÊıÎª3
+#åŒä¸€å®ä¾‹æœ€å¤§é‡è¯•æ¬¡æ•°ä¸º3
 ribbon.MaxAutoRetries=3
-#¸ºÔØ¾ùºâµÄÆäËûÊµÀıµÄÖØÊÔ´ÎÊıÎª3
+#è´Ÿè½½å‡è¡¡çš„å…¶ä»–å®ä¾‹çš„é‡è¯•æ¬¡æ•°ä¸º3
 ribbon.MaxAutoRetriesNextServer=3
-# ÊÇ·ñ¶ÔËùÓĞ²Ù×÷¶¼½øĞĞÖØÊÔ
+# æ˜¯å¦å¯¹æ‰€æœ‰æ“ä½œéƒ½è¿›è¡Œé‡è¯•
 ribbon.OkToRetryOnAllOperations=true
 spring.cloud.loadbalancer.retry.enabled =true
 
-stady  = 123
+stady  = 1234
