--- a/dev/consumer-dev.properties
+++ b/dev/consumer-dev.properties
@@ -14,4 +14,4 @@ ribbon.MaxAutoRetriesNextServer=3
 ribbon.OkToRetryOnAllOperations=true
 spring.cloud.loadbalancer.retry.enabled =true
 
-stady  = 1234452222
+stady  = 12
