--- a/dev/application-dev.properties
+++ b/dev/application-dev.properties
@@ -14,6 +14,6 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 #ribbon.NFLoadBalancerRuleClassName=cn.shunt.rule.RateMetadataRule
 
 eureka.client.registry-fetch-interval-seconds=5
-eureka.client.fetch-registry=false
-eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+#eureka.client.register-with-eureka=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
